# nn

./: .editorconfig  .gitignore  .gitmodules  .mise.toml  .swcrc  Cargo.toml  LICENSE  README-ko.md  README.md  eslint.config.mjs  index.py  infconfig.json  jest.config.ts  nn_parser.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: check-lint.yml
doc/: conf.py  index.rst
parsers/: block.ts  expressionList.ts  function.ts  functionCall.ts  functionParam.ts  functionType.ts  functionTypeParam.ts  identifier.ts  identifierExpression.ts  identifierSizeType.ts  index.ts  let.ts  namedFunction.ts  numberSizeType.ts  numericLiteral.ts  primitiveType.ts  primitiveTypeParam.ts  sizeTypeParam.ts  tensorType.ts  variableWithType.ts
peg/: nn.gram
scripts/: build.sh  check.sh
src/: index.py  index.ts  nn.ts  nn_parser.py  node.py  parser_base.py  sample_visitor.py  source.ts  source_file.py  synth.ts  utils.py
src/ast/: file.py  statement.py
src/nn_analyser/: __init__.py
src/nn_ast/: Cargo.toml  __init__.py  argument_decl.py  expression.py  source.py  statement.py
src/nn_backend_onnx/: __init__.py  call_node.py  tensor.py
src/nn_parser/: __init__.py
src/nn_type_checker/: __init__.py
src/nn_visitor/: __init__.py
src/ohm/: nn.ohm  nn.ohm-bundle.d.ts  nn.ohm-bundle.js
test/: nn.test.ts
test/parse/: linear.nn  reshape.nn  simple_function.nn
test/parse_fail/: function_type_with_tensor.nn  let_decl.nn  nested_function_call.nn  simple_function_type.nn  simple_tensor_type.nn
tests/: reshape.nn
tokens/: index.ts
(+35 files in other folders)
